# graphviz-rs

./: .gitignore  Cargo.toml  README.md  authflow.dot  build.rs  build_wasm.sh  error.txt  flake.nix  noname.gv  res.t  res.txt  result  wrapper.h
examples/: a_to_b.rs
native/: wrapper.c  wrapper.h
src/: bindings.rs  cgraph.rs  lib.rs  main.rs  rgraph.rs  sys.rs  theme.rs
src/rgraph/: command.rs  mod.rs  wasm.rs
src/style/: color.rs  mod.rs  serde.rs  serialize.rs  shape.rs
