[package]
name = "graphviz"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = { version = "0.2", optional = true }
serde = { version = "1.0.219", optional = true }
serde_derive = { version = "1.0.219", optional = true } 
uuid = { version = "1.17.0", features = ["v4", "serde"]}

[features]
serde = [ "dep:serde", "dep:serde_derive" ]
bindings = [ "dep:libc" ]
default = ["serde", "bindings"]


[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"
walkdir = "2.5.0"
